// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNFT caches multiple NFTs being loaded 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "111",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "107",
    },
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "106",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "108",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "111",
          },
          "createdAtTimestamp": "12974",
          "id": "109",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "112",
          },
          "createdAtTimestamp": "12974",
          "id": "110",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "118",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "114",
    },
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "113",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "115",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "118",
          },
          "createdAtTimestamp": "12974",
          "id": "116",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "119",
          },
          "createdAtTimestamp": "12974",
          "id": "117",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 3`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "111",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "107",
    },
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "106",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "108",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "111",
          },
          "createdAtTimestamp": "12974",
          "id": "109",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "112",
          },
          "createdAtTimestamp": "12974",
          "id": "110",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT caches multiple NFTs being loaded 4`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "118",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "114",
    },
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "113",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "115",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "118",
          },
          "createdAtTimestamp": "12974",
          "id": "116",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "119",
          },
          "createdAtTimestamp": "12974",
          "id": "117",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT correctly loads auction information from uniswap 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "180004289.8602",
          "inUSD": "2497421332516.94932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "29",
      "pricing": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "180004289.8602",
          "inUSD": "2497421332516.94932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "creator": Object {
      "id": "23",
    },
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "22",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "24",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "180004289.8602",
            "inUSD": "2497421332516.94932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "25",
          "pricing": Object {
            "amount": "10000",
            "computedValue": Object {
              "inETH": "138742323",
              "inUSD": "1924943219143.6329",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "amount": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "29",
        },
        "createdAtTimestamp": "12974",
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "26",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "32",
          },
          "createdAtTimestamp": "12974",
          "id": "30",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "180004289.8602",
              "inUSD": "2497421332516.94932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "33",
          },
          "createdAtTimestamp": "12974",
          "id": "31",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "180004289.8602",
              "inUSD": "2497421332516.94932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
    },
  },
}
`;

exports[`useNFT correctly loads auction information from uniswap 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "180004289.8602",
          "inUSD": "2497421332516.94932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "29",
      "pricing": Object {
        "amount": "12974",
        "computedValue": Object {
          "inETH": "180004289.8602",
          "inUSD": "2497421332516.94932446",
        },
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "creator": Object {
      "id": "23",
    },
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "22",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "24",
        "pricing": Object {
          "amount": "12974",
          "computedValue": Object {
            "inETH": "180004289.8602",
            "inUSD": "2497421332516.94932446",
          },
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "25",
          "pricing": Object {
            "amount": "10000",
            "computedValue": Object {
              "inETH": "138742323",
              "inUSD": "1924943219143.6329",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "amount": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "29",
        },
        "createdAtTimestamp": "12974",
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "26",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "32",
          },
          "createdAtTimestamp": "12974",
          "id": "30",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "180004289.8602",
              "inUSD": "2497421332516.94932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "33",
          },
          "createdAtTimestamp": "12974",
          "id": "31",
          "pricing": Object {
            "amount": "12974",
            "computedValue": Object {
              "inETH": "180004289.8602",
              "inUSD": "2497421332516.94932446",
            },
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
    },
  },
}
`;

exports[`useNFT correctly loads multiple perpetual bid NFTs 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "83",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "79",
    },
    "id": "1",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "78",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "80",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "83",
          },
          "createdAtTimestamp": "12974",
          "id": "81",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "84",
          },
          "createdAtTimestamp": "12974",
          "id": "82",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT correctly loads multiple perpetual bid NFTs 2`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "90",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "Hello World",
    "creator": Object {
      "id": "86",
    },
    "id": "2",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "Hello World",
    "owner": Object {
      "id": "85",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "87",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "90",
          },
          "createdAtTimestamp": "12974",
          "id": "88",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidder": Object {
            "id": "91",
          },
          "createdAtTimestamp": "12974",
          "id": "89",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT loads an NFT not in an auction with bids 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "10",
      "pricing": Object {
        "amount": "10000",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "creator": Object {
      "id": "44",
    },
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "43",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "45",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "46",
          "pricing": Object {
            "amount": "10000",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT loads an NFT with no bids and no auction 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "perpetual",
      "endingAt": undefined,
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": undefined,
    },
    "highestBid": undefined,
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "creator": Object {
      "id": "62",
    },
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "61",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "63",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [],
    },
    "reserve": undefined,
  },
}
`;

exports[`useNFT loads an nft currently in an auction 1`] = `
Object {
  "auction": Object {
    "current": Object {
      "auctionType": "reserve",
      "endingAt": "12974",
      "likelyHasEnded": false,
      "reserveMet": false,
      "reservePrice": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
    "highestBid": Object {
      "placedAt": "12974",
      "placedBy": "9",
      "pricing": Object {
        "amount": "12974",
        "computedValue": undefined,
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "prettyAmount": "1.2974e-14",
      },
    },
  },
  "nft": Object {
    "contentHash": "ByTeSStrInG",
    "contentURI": "https://zora.co/content",
    "creator": Object {
      "id": "3",
    },
    "id": "2974",
    "metadataHash": "ByTeSStrInG",
    "metadataURI": "https://zora.co/content",
    "owner": Object {
      "id": "2",
    },
  },
  "pricing": Object {
    "perpetual": Object {
      "ask": Object {
        "createdAtTimestamp": "12974",
        "id": "4",
        "pricing": Object {
          "amount": "12974",
          "computedValue": undefined,
          "currency": Object {
            "decimals": 18,
            "id": "0xFACE",
            "name": "Wrapped Ether",
            "symbol": "WETH",
          },
          "prettyAmount": "1.2974e-14",
        },
      },
      "bids": Array [
        Object {
          "bidder": Object {
            "id": "10",
          },
          "createdAtTimestamp": "12974",
          "id": "5",
          "pricing": Object {
            "amount": "10000",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1e-14",
          },
        },
      ],
    },
    "reserve": Object {
      "auctionCurrency": Object {
        "decimals": 18,
        "id": "0xFACE",
        "name": "Wrapped Ether",
        "symbol": "WETH",
      },
      "createdAtTimestamp": "12974",
      "currentBid": Object {
        "amount": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "9",
        },
        "createdAtTimestamp": "12974",
      },
      "duration": "12974",
      "expectedEndTimestamp": "12974",
      "finalizedAtTimestamp": "12974",
      "firstBidTime": "12974",
      "id": "6",
      "previousBids": Array [
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "12",
          },
          "createdAtTimestamp": "12974",
          "id": "10",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
        Object {
          "bidInactivatedAtBlockNumber": "12974",
          "bidInactivatedAtTimestamp": "12974",
          "bidType": "Final",
          "bidder": Object {
            "id": "13",
          },
          "createdAtTimestamp": "12974",
          "id": "11",
          "pricing": Object {
            "amount": "12974",
            "computedValue": undefined,
            "currency": Object {
              "decimals": 18,
              "id": "0xFACE",
              "name": "Wrapped Ether",
              "symbol": "WETH",
            },
            "prettyAmount": "1.2974e-14",
          },
        },
      ],
      "reservePrice": "1000000",
      "status": "Active",
      "tokenId": "2974",
    },
  },
}
`;
